--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -68,13 +68,13 @@ mixin footer()
           span.footer__copyright
             | Copyright © 2018 Toxin отель. Все права зачищены.
           .footer__social(aria-label='Социальные сети')
-            a(href='/mock-adress/').footer__social-link
+            a(href='/mock-adress/' target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href='#twitter')
-            a(href='/mock-adress/').footer__social-link
+            a(href='/mock-adress/' target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href='#facebook')
-            a(href='/mock-adress/').footer__social-link
+            a(href='/mock-adress/' target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href='#inst')
 
