--- a/src/main.pug
+++ b/src/main.pug
@@ -6,6 +6,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title task-2
+    meta(name='keywords' content='Отель, забронировать комнату')
     meta(name="description", content="frontend lessons")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     block head
@@ -15,6 +16,8 @@ html(lang='en')
       //- include ../includes/modules/header
       .content-wrapper
         block content
+
+
     svg(class='svg-icons' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink')
       defs
         style.
