--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -44,14 +44,14 @@ block content
 									className: 'js-date-masked'
 								}
 							)
-							h4.block-title dropdown
+							span.block-title dropdown
 							+dropdown-choose({className: 'js-dropdown-guests', title:'dropdown'})
 							+date-dropdown({className: 'js-date-masked', 
 							title: 'date dropdown', 
 							titleSecond: 'date dropdown'})
 							+filter-date({className: 'js-filter-date', title: 'filter date dropdown'})
 							+subscription({title: 'subscription', placeholder: 'Email'})
-							h4.block-title dropdown
+							span.block-title dropdown
 							+dropdown-choose({className: 'js-dropdown-beds', title: 'dropdown'})
 							+expand-list({title: 'expandable checkbox list', className: 'js-expand-list'})
 
