--- a/src/blocks/subscription/subscription.scss
+++ b/src/blocks/subscription/subscription.scss
@@ -20,7 +20,7 @@
     border: $border;
     border-radius: rem(4);
     transition: $trFast;
-    padding: 12px 15px;
+    padding: 12px 40px 12px 15px;
     font-size: rem(14);
     color: $ds75;
     font-family: 'MontserratMedium', sans-serif;
