change single quotes to double

--- a/src/blocks/card-checkin/card-checkin.pug
+++ b/src/blocks/card-checkin/card-checkin.pug
@@ -59,4 +59,4 @@ mixin card-checkin()
           .card-checkin__sing-in 
             span.card-checkin__sing-in-text
               | Уже есть аккаунт на Toxin
-            a(href='singin-page.html').button.button_white Войти
+            a(href="singin-page.html").button.button_white Войти
