--- a/src/blocks/card-singin/card-singin.pug
+++ b/src/blocks/card-singin/card-singin.pug
@@ -26,4 +26,4 @@ mixin card-singin()
         .card-singin__check-in 
           span.card-singin__check-in-text
             | Нет аккаунта на Toxin?
-          a(href='registration-page.html').button.button_white Создать
+          a(href="registration-page.html").button.button_white Создать
