--- a/src/blocks/circle-diagram/circle-diagram.pug
+++ b/src/blocks/circle-diagram/circle-diagram.pug
@@ -5,7 +5,7 @@ mixin circle-diagram()
         i 
           | 260 
         | голосов
-      canvas(id='CircleDiagram')
+      canvas(id="CircleDiagram")
     ul.circle-diagram__list
       li.circle-diagram__list-item
         | Великолепно  
