--- a/src/blocks/date-dropdown/date-dropdown.pug
+++ b/src/blocks/date-dropdown/date-dropdown.pug
@@ -2,7 +2,7 @@ mixin date-dropdown({className, title, titleSecond})
   .date-dropdown
     label.date-dropdown__label
       span.block-title #{title}
-      input(type='text' placeholder="ДД.ММ.ГГГГ" class=className readonly).date-dropdown__input.js-date-dropdown__input
+      input(type="text" placeholder="ДД.ММ.ГГГГ" class=className readonly).date-dropdown__input.js-date-dropdown__input
     label.date-dropdown__label
       span.block-title #{titleSecond}
-      input(type='text' placeholder="ДД.ММ.ГГГГ" class=className readonly).date-dropdown__input
+      input(type="text" placeholder="ДД.ММ.ГГГГ" class=className readonly).date-dropdown__input
