--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -4,7 +4,7 @@ mixin footer()
       .footer__content
         .footer__block-text
           svg.footer__logo.logo.logo_colored
-            use(xlink:href='#logo-colored')
+            use(xlink:href="#logo-colored")
           p.footer__achivement
             | Бронирование номеров в лучшем
             | отеле 2019 года по версии
@@ -15,45 +15,45 @@ mixin footer()
               span.block-title
                 | Навигация
             li.footer__list-item
-              a.footer__link(href='/mock-adress/')
+              a.footer__link(href="/mock-adress/")
                 | О нас
             li.footer__list-item
-              a.footer__link(href='/mock-adress/')
+              a.footer__link(href="/mock-adress/")
                 | Новости
             li.footer__list-item
-              a.footer__link(href='/mock-adress/')
+              a.footer__link(href="/mock-adress/")
                 | Служба поддержки
             li.footer__list-item
-              a.footer__link(href='/mock-adress/')
+              a.footer__link(href="/mock-adress/")
                 | Услуги
         ul.footer__list
           li.footer__list-item
             span.block-title
               | О нас
           li.footer__list-item
-            a.footer__link(href='/mock-adress/')
+            a.footer__link(href="/mock-adress/")
               | О сервисе
           li.footer__list-item
-            a.footer__link(href='/mock-adress/')
+            a.footer__link(href="/mock-adress/")
               | Наша команда
           li.footer__list-item
-            a.footer__link(href='/mock-adress/')
+            a.footer__link(href="/mock-adress/")
               | Вакансии
           li.footer__list-item
-            a.footer__link(href='/mock-adress/')
+            a.footer__link(href="/mock-adress/")
               | Инвесторы    
         ul.footer__list
           li.footer__list-item
             span.block-title
               | Служба поддержки
           li.footer__list-item
-            a.footer__link(href='/mock-adress/')
+            a.footer__link(href="/mock-adress/")
               | Соглашения
           li.footer__list-item
-            a.footer__link(href='/mock-adress/')
+            a.footer__link(href="/mock-adress/")
               | Сообщества
           li.footer__list-item
-            a.footer__link(href='/mock-adress/')
+            a.footer__link(href="/mock-adress/")
               | Связь с нами 
         .footer__subscribe
           span.block-title.footer__subscribe-title
@@ -67,14 +67,14 @@ mixin footer()
         .footer__basement-content
           span.footer__copyright
             | Copyright © 2018 Toxin отель. Все права зачищены.
-          .footer__social(aria-label='Социальные сети')
-            a(href='/mock-adress/' target="_blank" rel="noreferrer noopener").footer__social-link
+          .footer__social(aria-label="Социальные сети")
+            a(href="/mock-adress/" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
-                use(xlink:href='#twitter')
-            a(href='/mock-adress/' target="_blank" rel="noreferrer noopener").footer__social-link
+                use(xlink:href="#twitter")
+            a(href="/mock-adress/" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
-                use(xlink:href='#facebook')
-            a(href='/mock-adress/' target="_blank" rel="noreferrer noopener").footer__social-link
+                use(xlink:href="#facebook")
+            a(href="/mock-adress/" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
-                use(xlink:href='#inst')
+                use(xlink:href="#inst")
 
