--- a/src/blocks/rich-list/rich-list.pug
+++ b/src/blocks/rich-list/rich-list.pug
@@ -4,7 +4,7 @@ mixin rich-list({title})
     ul.rich-list__ul
       li.rich-list__li
         label.rich-list__item
-          input(type='checkbox').rich-list__checkbox
+          input(type="checkbox").rich-list__checkbox
           span.rich-list__custom-checkbox 
           span.rich-list__text 
             span.rich-list__head Широкий коридор
@@ -14,7 +14,7 @@ mixin rich-list({title})
               | не менее 91 см.
       li.rich-list__li
         label.rich-list__item
-          input(type='checkbox').rich-list__checkbox
+          input(type="checkbox").rich-list__checkbox
           span.rich-list__custom-checkbox 
           div.rich-list__text 
             span.rich-list__head Помощник для инвалидов
