--- a/src/blocks/card-room/card-room.pug
+++ b/src/blocks/card-room/card-room.pug
@@ -7,14 +7,14 @@ mixin card-room({src: PATHS})
         .swiper-button-next.card-room__button-next
         .swiper-wrapper
           .swiper-slide.card-room__slide
-            img(src=require('../assets/img/' + PATHS[0]).default alt='фотография конматы').card-room__slider-img
+            img(src=require('../assets/img/' + PATHS[0]).default alt="фотография конматы").card-room__slider-img
           .swiper-slide.card-room__slide
-            img(src=require('../assets/img/' + PATHS[1]).default alt='фотография конматы').card-room__slider-img
+            img(src=require('../assets/img/' + PATHS[1]).default alt="фотография конматы").card-room__slider-img
           .swiper-slide.card-room__slide
-            img(src=require('../assets/img/' + PATHS[2]).default alt='фотография конматы').card-room__slider-img
+            img(src=require('../assets/img/' + PATHS[2]).default alt="фотография конматы").card-room__slider-img
             z
           .swiper-slide.card-room__slide
-            img(src=require('../assets/img/' + PATHS[3]).default alt='фотография конматы').card-room__slider-img
+            img(src=require('../assets/img/' + PATHS[3]).default alt="фотография конматы").card-room__slider-img
             z
     .card-room__content
       .card-room__head
