--- a/src/blocks/card-selection/card-selection.pug
+++ b/src/blocks/card-selection/card-selection.pug
@@ -16,4 +16,4 @@ mixin card-selection()
             h4.block-title
               | Гости
             +dropdown-choose({className: 'js-dropdown-guests', title:'Гости'})
-          button(type='submit').button.button_big перейти к оплате
+          button(type="submit").button.button_big перейти к оплате
