--- a/src/blocks/dropdown-choose/dropdown-choose.pug
+++ b/src/blocks/dropdown-choose/dropdown-choose.pug
@@ -1,2 +1,2 @@
 mixin dropdown-choose({className})
-  div(class=className aria-label='Выбор количества')
+  div(class=className aria-label="Выбор количества")
