--- a/src/blocks/dropdown-choose/dropdown-choose.scss
+++ b/src/blocks/dropdown-choose/dropdown-choose.scss
@@ -45,14 +45,14 @@
   }
   &__menu {
     position: absolute;
-    top: 100%;
+    top: calc(100% - 2px);
+    left: -1px;
     width: 100%;
     z-index: 100;
     max-height: 0;
     overflow: hidden;
     transition: max-height $trFast;
     background-color: #fff;
-    margin: -2px -1px -1px;
     border: $borderHover;
     border-bottom: none;
     border-top: none;
