--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -2,68 +2,68 @@ mixin header({isEntered})
   header.header
     .container
       .header__content
-        svg(class='logo logo_colored header__logo' aria-label='toxin logo')
+        svg(class="logo logo_colored header__logo" aria-label="toxin logo")
           use(xlink:href="#logo-colored")
         nav.header__nav
           ul.header__list
             li.header__list-item
-              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+              a.header__link(href="https://mock-adress" aria-label="информация о нас")
                 | О нас
 
             li.header__list-item.header__list-item_dropdown
-              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+              a.header__link(href="https://mock-adress" aria-label="информация о нас")
                 | Услуги
 
             li.header__list-item
-              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+              a.header__link(href="https://mock-adress" aria-label="информация о нас")
                 | Вакансии
 
             li.header__list-item
-              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+              a.header__link(href="https://mock-adress" aria-label="информация о нас")
                 | Новости
 
             li.header__list-item.header__list-item_dropdown
-              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+              a.header__link(href="https://mock-adress" aria-label="информация о нас")
                 | Соглашения
           if !isEntered
             .header__buttons
-              a(href='singin-page.html').button.button_white.header__button
+              a(href="singin-page.html").button.button_white.header__button
                 | Войти
-              a(href='registration-page.html').button.header__button
+              a(href="registration-page.html").button.header__button
                 | Зарегистрироваться
           else 
-            a(href='/mock-adress').header__cabinet
+            a(href="/mock-adress").header__cabinet
               | Юлий Цезарь
-        .header__burger.js-header__burger(role='navigation' aria-label='menu')
+        .header__burger.js-header__burger(role="navigation" aria-label="menu")
     
     .header__nav-shadow.js-header__nav-shadow
     nav.header__nav.header__nav_dropdown.js-header__nav_dropdown
         ul.header__list
           li.header__list-item
-            a.header__link(href='https://mock-adress' aria-label='информация о нас')
+            a.header__link(href="https://mock-adress" aria-label="информация о нас")
               | О нас
 
           li.header__list-item.header__list-item_dropdown
-            a.header__link(href='https://mock-adress' aria-label='информация о нас')
+            a.header__link(href="https://mock-adress" aria-label="информация о нас")
               | Услуги
 
           li.header__list-item
-            a.header__link(href='https://mock-adress' aria-label='информация о нас')
+            a.header__link(href="https://mock-adress" aria-label="информация о нас")
               | Вакансии
 
           li.header__list-item
-            a.header__link(href='https://mock-adress' aria-label='информация о нас')
+            a.header__link(href="https://mock-adress" aria-label="информация о нас")
               | Новости
 
           li.header__list-item.header__list-item_dropdown
-            a.header__link(href='https://mock-adress' aria-label='информация о нас')
+            a.header__link(href="https://mock-adress" aria-label="информация о нас")
               | Соглашения
         if !isEntered
-          a(href='singin-page.html').button.button_white.header__button
+          a(href="singin-page.html").button.button_white.header__button
             | Войти
           br
-          a(href='registration-page.html').button.header__button
+          a(href="registration-page.html").button.header__button
             | Зарегистрироваться
         else 
-          a(href='/mock-adress').header__cabinet
+          a(href="/mock-adress").header__cabinet
             | Юлий Цезарь
