--- a/src/blocks/card-book/card-book.pug
+++ b/src/blocks/card-book/card-book.pug
@@ -7,7 +7,7 @@ mixin card-book()
           span.card-book__head-num
             | 888
           span.card-book__type
-            | люкс
+            | люкс 
         span.card-book__head-price
           span.card-book__head-sum
             span
@@ -33,15 +33,17 @@ mixin card-book()
               | 39 960₽
           .card-book__calc-item
             span.card-book__calc-option
-              | Сбор за услуги: скидка 2 179₽ 
-            span.card-book__calc-info i
+              | Сбор за услуги: скидка 2 179₽
+            span.card-book__calc-info
+              | i
             span.card-book__calc-sum
               | 0₽
           .card-book__calc-item
             span.card-book__calc-option
               | Сбор за дополнительные 
               | услуги
-            span.card-book__calc-info i
+            span.card-book__calc-info
+              | i
             span.card-book__calc-sum
               | 300₽
         .card-book__calc-total
