--- a/src/blocks/card-checkin/card-checkin.scss
+++ b/src/blocks/card-checkin/card-checkin.scss
@@ -1,5 +1,6 @@
 .card-checkin {
   max-width: 380px;
+  max-height: 643px;
   background-color: $white;
   border-radius: 4px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
