--- a/src/blocks/subscription/subscription.scss
+++ b/src/blocks/subscription/subscription.scss
@@ -16,7 +16,7 @@
   }
   &__input {
     display: block;
-    min-width: 266px;
+    width: 100%;
     max-width: 266px;
     border: $border;
     border-radius: rem(4);
