--- a/src/blocks/advantages/advantages.scss
+++ b/src/blocks/advantages/advantages.scss
@@ -1,6 +1,7 @@
 .advantages {
   display: flex;
   justify-content: flex-start;
+  max-width: 300px;
   &__li {
     display: block;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
