--- a/src/blocks/circle-diagram/circle-diagram.scss
+++ b/src/blocks/circle-diagram/circle-diagram.scss
@@ -33,6 +33,8 @@
     }
   }
   &__list {
+    display: block;
+    max-width: 180px;
     margin-left: rem(20);
     font-size: rem(14);
     line-height: rem(24);
