--- a/src/blocks/filter-date/filter-date.pug
+++ b/src/blocks/filter-date/filter-date.pug
@@ -2,4 +2,4 @@ mixin filter-date({className, title})
   .filter-date
     label
       span.block-title #{title}
-      input(type="text" placeholder="от и до" class=className readonly).filter-date__input.js-filter-date__input
+      input(type="text" placeholder="от и до" class=className readonly required).filter-date__input.js-filter-date__input
