--- a/src/blocks/textField/textField.pug
+++ b/src/blocks/textField/textField.pug
@@ -1,11 +1,11 @@
-mixin textField({title, type, placeholder, required})
+mixin textField({title, type, placeholder, required, pat})
 	label.textfield
 		span.block-title #{title}
 		input.textfield__input(
 			type=type 
 			name=type
 			placeholder=placeholder
-			pattern='[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$' 
+			pattern=pat 
 			required=required
 		)
 
