change assetss' names, fix url of sing-in-page

--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -27,7 +27,7 @@ mixin header({isEntered})
                 | Соглашения
           if !isEntered
             .header__buttons
-              a(href="singin-page.html").button.button_white.header__button
+              a(href="sing-in-page.html").button.button_white.header__button
                 | Войти
               a(href="registration-page.html").button.header__button
                 | Зарегистрироваться
@@ -59,7 +59,7 @@ mixin header({isEntered})
             a.header__link(href="https://mock-adress" aria-label="информация о нас")
               | Соглашения
         if !isEntered
-          a(href="singin-page.html").button.button_white.header__button
+          a(href="sing-in-page.html").button.button_white.header__button
             | Войти
           br
           a(href="registration-page.html").button.header__button
