--- a/src/blocks/sing-in-page/sing-in-page.scss
+++ b/src/blocks/sing-in-page/sing-in-page.scss
@@ -1,4 +1,4 @@
-.singin-page {
+.sing-in-page {
   background-image: url('assets/img/Landing-page-bg-2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
