--- a/src/pages/sing-in-page.pug
+++ b/src/pages/sing-in-page.pug
@@ -11,9 +11,9 @@ include ../blocks/dropdown-choose/dropdown-choose
 
 block content
   +header({isEntered: false})
-  .singin-page
+  .sing-in-page
     .container
-      main.singin-page__main
+      main.sing-in-page__main
         +card-singin()
   +footer()
 
