change url for sign-in-page.html

--- a/src/blocks/card-checkin/card-checkin.pug
+++ b/src/blocks/card-checkin/card-checkin.pug
@@ -62,4 +62,4 @@ mixin card-checkin()
           .card-checkin__sing-in 
             span.card-checkin__sing-in-text
               | Уже есть аккаунт на Toxin
-            a(href="sing-in-page.html").button.button_white Войти
+            a(href="sign-in-page.html").button.button_white Войти
