--- a/src/blocks/filter-date/filter-date.pug
+++ b/src/blocks/filter-date/filter-date.pug
@@ -1,5 +1,7 @@
 mixin filter-date({className, title})
   .filter-date
-    label
+    label.filter-date__label
       span.block-title #{title}
       input(type="text" placeholder="от и до" class=className readonly required).filter-date__input.js-filter-date__input
+      svg.filter-date__arrow
+        use(xlink:href="#expand_more")
