change css class in pug for js selection and delete strange construction #13

--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,5 +1,5 @@
 mixin header({isEntered})
-  header.header
+  header.header.js-header
     .container
       .header__content
         svg(class="logo logo_colored header__logo" aria-label="toxin logo")
