--- a/src/blocks/rate-buttons/rate-buttons.pug
+++ b/src/blocks/rate-buttons/rate-buttons.pug
@@ -1,7 +1,7 @@
 mixin rate-buttons()
   .rate-buttons.js-rate-buttons
     label.rate-buttons__label
-      input(type="checkbox").rate-buttons__input
+      input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star_border").rate-buttons__star
@@ -9,7 +9,7 @@ mixin rate-buttons()
           use(xlink:href="#star").rate-buttons__star
       
     label.rate-buttons__label
-      input(type="checkbox").rate-buttons__input
+      input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star_border").rate-buttons__star
@@ -17,7 +17,7 @@ mixin rate-buttons()
           use(xlink:href="#star").rate-buttons__star
 
     label.rate-buttons__label
-      input(type="checkbox").rate-buttons__input
+      input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star_border").rate-buttons__star
@@ -25,7 +25,7 @@ mixin rate-buttons()
           use(xlink:href="#star").rate-buttons__star
 
     label.rate-buttons__label
-      input(type="checkbox").rate-buttons__input
+      input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star_border").rate-buttons__star
@@ -33,7 +33,7 @@ mixin rate-buttons()
           use(xlink:href="#star").rate-buttons__star
 
     label.rate-buttons__label
-      input(type="checkbox").rate-buttons__input
+      input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star_border").rate-buttons__star
