--- a/src/blocks/expand-list/expand-list.pug
+++ b/src/blocks/expand-list/expand-list.pug
@@ -1,45 +1,45 @@
 mixin expand-list({title, className})
   .expand-list(class=className)
     label
-      span.block-title.expand-list__title #{title}
-      .expand-list__dropdown
+      span.block-title.expand-list__title.js-expand-list__title #{title}
+      .expand-list__dropdown.js-expand-list__dropdown
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Завтрак
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Письменный стол
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Стул для кормления
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Кроватка
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Телевизор
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Шампунь
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Телевизор
         label.expand-list__item
-          input(type="checkbox").expand-list__checkbox
+          input(type="checkbox").expand-list__checkbox.js-expand-list__checkbox
           span.expand-list__custom-checkbox 
           span.expand-list__text
             | Шампунь
