--- a/src/blocks/range-slider/range-slider.pug
+++ b/src/blocks/range-slider/range-slider.pug
@@ -2,5 +2,5 @@ mixin range-slider({title, interval})
   .range-slider
     .range-slider__head 
       span.block-title #{title}
-      span.range-slider__values #{interval}
+      span.range-slider__values.js-range-slider__values #{interval}
     input.js-range-slider__input.range-slider__input
