--- a/src/pages/headers-&-footers.pug
+++ b/src/pages/headers-&-footers.pug
@@ -5,18 +5,24 @@ include ../blocks/subscription/subscription
 include ../blocks/header/header
 include ../blocks/footer/footer
 
+block head
+  link(rel='apple-touch-icon' sizes='180x180' href='favicons/apple-touch-icon.png')
+  link(rel='icon' type='image/png' sizes='32x32' href='favicons/favicon-32x32.png')
+  link(rel='icon' type='image/png' sizes='16x16' href='favicons/favicon-16x16.png')
+  link(rel='manifest' href='favicons/site.webmanifest')
+
 block content
-	svg.logo.logo_grey(role='image' aria-label='toxin logo')
-		use(xlink:href="#logo-gray")
-	main.headers-footers
-		.headers-footers__content
-			.headers-footers__block
-				+header({isEntered: false})
-			.headers-footers__block
-				+header({isEntered: true})
-		.header-footers__block
-			+footer()
+  svg.logo.logo_grey(role='image' aria-label='toxin logo')
+    use(xlink:href="#logo-gray")
+  main.headers-footers
+    .headers-footers__content
+      .headers-footers__block
+        +header({isEntered: false})
+      .headers-footers__block
+        +header({isEntered: true})
+    .header-footers__block
+      +footer()
 
 
 block script
-	script
+  script
