--- a/src/pages/Filter-page.pug
+++ b/src/pages/Filter-page.pug
@@ -16,6 +16,11 @@ include ../blocks/expand-list/expand-list
 include ../blocks/card-room/card-room
 include ../blocks/rate-buttons/rate-buttons
 include ../blocks/pagination/pagination
+block head
+  link(rel='apple-touch-icon' sizes='180x180' href='favicons/apple-touch-icon.png')
+  link(rel='icon' type='image/png' sizes='32x32' href='favicons/favicon-32x32.png')
+  link(rel='icon' type='image/png' sizes='16x16' href='favicons/favicon-16x16.png')
+  link(rel='manifest' href='favicons/site.webmanifest')
 
 block content
   +header({isEntered: false})
