--- a/src/pages/room-details.pug
+++ b/src/pages/room-details.pug
@@ -12,6 +12,12 @@ include ../blocks/review/review
 include ../blocks/like-button/like-button
 include ../blocks/bullet-list/bullet-list
 
+block head
+  link(rel='apple-touch-icon' sizes='180x180' href='favicons/apple-touch-icon.png')
+  link(rel='icon' type='image/png' sizes='32x32' href='favicons/favicon-32x32.png')
+  link(rel='icon' type='image/png' sizes='16x16' href='favicons/favicon-16x16.png')
+  link(rel='manifest' href='favicons/site.webmanifest')
+
 block content
   +header({isEntered: false})
   .room-details
