replace bissnes logic into classes

--- a/src/blocks/like-button/like-button.pug
+++ b/src/blocks/like-button/like-button.pug
@@ -1,5 +1,5 @@
 mixin like-button({className, count})
-  button.like-button(class=className)
+  button.like-button.js-like-button(class=className)
     svg.like-button__like.js-like-button__like
       use(xlink:href="#like-noactive")
     svg.like-button__like-favorite.js-like-button__like-favorite
