add className to tags without className #12

--- a/src/blocks/card-checkin/card-checkin.pug
+++ b/src/blocks/card-checkin/card-checkin.pug
@@ -2,8 +2,8 @@ mixin card-checkin()
   .card-checkin
     .card-checkin__content
       form.card-checkin__form
-        fieldset
-          legend
+        fieldset.card-checkin__form-fieldset
+          legend.card-checkin__form-legend
             h1.card-checkin__title
               | Регистрация аккаунта
           .card-checkin__item.card-checkin__item_margin-b-10
