--- a/src/blocks/card-room/card-room.pug
+++ b/src/blocks/card-room/card-room.pug
@@ -26,7 +26,7 @@ mixin card-room({src: PATHS})
             | люкс
         span.card-room__head-price
           span.card-room__head-sum
-            span
+            span.card-room__head-num
               | 9 990₽ 
           | в сутки
       .card-room__bottom
