--- a/src/blocks/card-selection/card-selection.pug
+++ b/src/blocks/card-selection/card-selection.pug
@@ -2,8 +2,8 @@ mixin card-selection()
   .card-selection
     .card-selection__content
       form.card-selection__form
-        fieldset
-          legend
+        fieldset.card-selection__form-fieldset
+          legend.card-selection__form-legend
             h1.card-selection__title 
               | Найдем номера под ваши пожелания
           .card-selection__block.card-selection__block_margin-b-15
