--- a/src/blocks/circle-diagram/circle-diagram.pug
+++ b/src/blocks/circle-diagram/circle-diagram.pug
@@ -2,7 +2,7 @@ mixin circle-diagram()
   .circle-diagram
     .circle-diagram__container
       .circle-diagram__voices
-        i 
+        i.card-diagram__num 
           | 260 
         | голосов
       canvas(id="CircleDiagram")
