--- a/src/blocks/expand-list/expand-list.pug
+++ b/src/blocks/expand-list/expand-list.pug
@@ -1,6 +1,6 @@
 mixin expand-list({title, className})
   .expand-list(class=className)
-    label
+    label.expand-list__main-label
       span.block-title.expand-list__title.js-expand-list__title #{title}
       .expand-list__dropdown.js-expand-list__dropdown
         label.expand-list__item
