--- a/src/blocks/radio-buttons/radio-buttons.pug
+++ b/src/blocks/radio-buttons/radio-buttons.pug
@@ -1,11 +1,11 @@
 mixin radio-buttons({title}) 
   .radio-buttons
     .radio-buttons__inputs
-      label
-        input(type="radio" name="radio")
+      label.radio-buttons__label
+        input(type="radio" name="radio").radio-buttons__input
         span.radio-buttons__checkmark
         span.radio-buttons__text Мужчина
-      label
-        input(type="radio" name="radio")
+      label.radio-buttons__label
+        input(type="radio" name="radio").radio-buttons__input
         span.radio-buttons__checkmark
         span.radio-buttons__text Женщина
