--- a/src/blocks/radio-buttons/radio-buttons.scss
+++ b/src/blocks/radio-buttons/radio-buttons.scss
@@ -8,7 +8,7 @@
   &:last-child {
     margin-right: 0;
   }
-  label {
+  &__label {
     display: inline-flex;
     align-items: center;
     margin-right: rem(20);
@@ -22,7 +22,7 @@
     font-size: rem(12);
     color: $ds100;
   }
-  input {
+  &__input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
