change assets names to lower-case-hyphenated #11

--- a/src/blocks/date-dropdown/date-dropdown.pug
+++ b/src/blocks/date-dropdown/date-dropdown.pug
@@ -4,9 +4,9 @@ mixin date-dropdown({className, title, titleSecond})
       span.block-title #{title}
       input(type="text" placeholder="ДД.ММ.ГГГГ" class=className readonly required).date-dropdown__input.js-date-dropdown__input
       svg.date-dropdown__arrow
-        use(xlink:href="#expand_more")
+        use(xlink:href="#expand-more")
     label.date-dropdown__label
       span.block-title #{titleSecond}
       input(type="text" placeholder="ДД.ММ.ГГГГ" class=className readonly required).date-dropdown__input
       svg.date-dropdown__arrow
-        use(xlink:href="#expand_more")
+        use(xlink:href="#expand-more")
