--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -97,12 +97,12 @@ block content
                   {
                     title: 'Комфорт',
                     description: 'Шумопоглащиющие стены',
-                    href: '#insert_emoticon'
+                    href: '#insert-emoticon'
                   },
                   {
                     title: 'Удобство',
                     description: 'Окно в каждой из спален',
-                    href: '#location_city'
+                    href: '#location-city'
                   },
 
                 ]})
